--- a/resource-server/pom.xml
+++ b/resource-server/pom.xml
@@ -44,12 +44,10 @@
     </dependency>
 
     <!-- https://mvnrepository.com/artifact/org.springframework.security/spring-security-jwt -->
-    <dependency>
-        <groupId>org.springframework.security</groupId>
-        <artifactId>spring-security-jwt</artifactId>
-        <version>1.0.10.RELEASE</version>
-    </dependency>
-
+        <dependency>
+            <groupId>org.example</groupId>
+            <artifactId>auth</artifactId>
+        </dependency>
 
     <dependency>
         <groupId>org.springframework.security.oauth.boot</groupId>
