--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,7 @@
         <revision>1.0</revision>
         <maven.compiler.source>8</maven.compiler.source>
         <maven.compiler.target>8</maven.compiler.target>
+        <servlet-api.version>3.0.1</servlet-api.version>
         <spring-boot-dependencies.version>2.2.5.RELEASE</spring-boot-dependencies.version>
     </properties>
     <dependencies>
@@ -67,7 +68,6 @@
 <!--                <artifactId>tomcat-embed-core</artifactId>-->
 <!--                <version>9.0.12</version>-->
 <!--            </dependency>-->
-
         </dependencies>
     </dependencyManagement>
 
