--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,9 @@
         <module>authorization-server</module>
         <module>resource-server</module>
         <module>auth</module>
+        <module>sys</module>
+        <module>gateway</module>
+        <module>resource-server2</module>
     </modules>
     <packaging>pom</packaging>
 
@@ -21,6 +24,10 @@
         <maven.compiler.target>8</maven.compiler.target>
         <servlet-api.version>3.0.1</servlet-api.version>
         <spring-boot-dependencies.version>2.2.5.RELEASE</spring-boot-dependencies.version>
+        <mysql-connector-java.version>8.0.21</mysql-connector-java.version>
+        <derby.version>10.14.2.0</derby.version>
+        <HikariCP.version>3.4.2</HikariCP.version>
+        <commons-lang3.version>3.4</commons-lang3.version>
     </properties>
     <dependencies>
         <dependency>
@@ -33,11 +40,21 @@
             <artifactId>mockito-core</artifactId>
             <scope>test</scope>
         </dependency>
-
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-inline</artifactId>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
     <dependencyManagement>
         <dependencies>
+            <dependency>
+                <groupId>javax.servlet</groupId>
+                <artifactId>javax.servlet-api</artifactId>
+                <scope>provided</scope>
+                <version>${servlet-api.version}</version>
+            </dependency>
             <dependency>
                 <!-- Import dependency management from Spring Boot -->
                 <groupId>org.springframework.boot</groupId>
@@ -60,8 +77,28 @@
             </dependency>
             <dependency>
                 <groupId>${project.groupId}</groupId>
+                <artifactId>sys</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>${project.groupId}</groupId>
                 <artifactId>auth</artifactId>
                 <version>${project.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.apache.derby</groupId>
+                <artifactId>derby</artifactId>
+                <version>${derby.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.zaxxer</groupId>
+                <artifactId>HikariCP</artifactId>
+                <version>${HikariCP.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.apache.commons</groupId>
+                <artifactId>commons-lang3</artifactId>
+                <version>${commons-lang3.version}</version>
             </dependency>
 <!--            <dependency>-->
 <!--                <groupId>org.apache.tomcat.embed</groupId>-->
